Added documentation for the remaining endpoints except one
